# SmartpowerModbus

./: .gitignore  CLAUDE.md  LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
smartpower_modbus/: __init__.py  _transport.py  branches.py  cli.py  client.py  exceptions.py  models.py  registers.py  units.py
tests/: conftest.py  test_branch_maps.py  test_capacitance.py  test_cli.py  test_client_lifecycle.py  test_device_info.py  test_models.py  test_transport.py  test_transport_errors.py  test_units.py
tests/hardware/: PLAN.md  README.md  conftest.py  test_fault_recovery.py  test_register_sweep.py  test_smoke.py  test_writes.py
