[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartpower-modbus"
version = "0.1.0"
description = "Modbus RTU client for SmartPower (MOD-537-250) control boards"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ultraflex Power" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
    "Topic :: Communications",
]
dependencies = [
    "pymodbus>=3.7,<4",
    "pyserial>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
smartpower-cli = "smartpower_modbus.cli:main"

[tool.setuptools.packages.find]
include = ["smartpower_modbus*"]

[tool.setuptools.package-data]
smartpower_modbus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "hardware: live-device test against a real SmartPower module. Skipped unless --hardware is passed (see tests/hardware/README.md).",
    "hardware_write: live-device test that performs a Modbus write. Skipped unless both --hardware and --allow-writes are passed.",
    "hardware_fault: live-device fault-injection test (illegal-address, timeout, ...). Skipped unless both --hardware and --allow-fault-injection are passed.",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# Curated set: pycodestyle, pyflakes, isort, pyupgrade, bugbear, simplify.
# Keep narrow on purpose — the codebase isn't autoformatted, so noisy rules
# would produce churn without obvious wins.
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E501 line-too-long is intentional for docstrings + log messages; rely on
# the soft 100-char target instead of a hard wrap.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests can use bare `assert`, longer functions, etc.
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
files = ["smartpower_modbus"]
# Gradual typing: turn the strict knobs on as the codebase converges.
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
# pymodbus is untyped in the versions we pin; don't crash mypy over it.
module = ["pymodbus.*"]
ignore_missing_imports = true
